--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -27,10 +27,9 @@
     font-weight: 900;
 }
 
-.links {
+.menu {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     width: 336px;
-    font-size: 0.875rem;
 }
